--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,6 +1,10 @@
 <div class="visits">
   <h1>Visits</h1>
 
+  <div class="summary">
+    <p>Total Visits: <span><%= @total_visits %></span></p>
+  </div>
+
   <div class="chart-wrapper">
     <table id="by-page" class="charts-css bar show-heading show-labels show-primary-axis labels-align-start data-spacing-0">
       <caption> Number of Visits by Page </caption>
@@ -11,68 +15,15 @@
         </tr>
       </thead>
       <tbody>
+        <% @by_page.each do |stats_item| %>
         <tr>
-          <th scope="row"> /blog/start-rails-6-project-with-rspec/ </th>
-          <td style="--size: 0.35;"> <span class="data"> 49 </span> </td>
+          <th scope="row"> <%= stats_item.value %> </th>
+          <td style="--size: <%= stats_item.percentage %>;"> <span class="data"> <%= stats_item.count %> </span> </td>
         </tr>
-        <tr>
-          <th scope="row"> /blog/debug-github-action/ </th>
-          <td style="--size: 0.17142857142857143;"> <span class="data"> 24 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> / </th>
-          <td style="--size: 0.10714285714285714;"> <span class="data"> 15 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/dockerize-rails-app-for-dev-debug-and-testing/ </th>
-          <td style="--size: 0.1;"> <span class="data"> 14 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog </th>
-          <td style="--size: 0.06428571428571428;"> <span class="data"> 9 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/python-interview-question-in-ruby/ </th>
-          <td style="--size: 0.05714285714285714;"> <span class="data"> 8 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/build-and-publish-presentation-with-html-and-css/ </th>
-          <td style="--size: 0.05;"> <span class="data"> 7 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/tdd-by-example/ </th>
-          <td style="--size: 0.04285714285714286;"> <span class="data"> 6 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/patch-request-with-json-api/ </th>
-          <td style="--size: 0.02142857142857143;"> <span class="data"> 3 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/iterm-automation/ </th>
-          <td style="--size: 0.02142857142857143;"> <span class="data"> 3 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/2 </th>
-          <td style="--size: 0.007142857142857143;"> <span class="data"> 1 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/emergency-fund-fine-print/ </th>
-          <td style="--size: 0.007142857142857143;"> <span class="data"> 1 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /blog/4 </th>
-          <td style="--size: 0.007142857142857143;"> <span class="data"> 1 </span> </td>
-        </tr>
-        <tr>
-          <th scope="row"> /about </th>
-          <td style="--size: 0.007142857142857143;"> <span class="data"> 1 </span> </td>
-        </tr>
+        <%end %>
       </tbody>
     </table>
-
     <div class="primary-axis"> Number of Visits </div>
-
     <div class="data-axis"> URL </div>
-
   </div>
 </div>
