some bare bones styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+.app-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.app-title {
+  font-size: 28px;
+  opacity: 0.7;
+}
