--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-  <%= yield %>
+  <div class="app-container">
+    <h1 class="app-title">Hello Visitor: Privacy Focused Analytics</h1>
+    <%= yield %>
+  </div>
 </body>
 
 </html>
