adjust chart title spacing

--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -8,6 +8,7 @@
     .chart-header {
       font-size: 14px;
       letter-spacing: 1.1px;
+      margin-bottom: 25px;
       opacity: 0.9;
       text-transform: uppercase;
     }
