--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -5,12 +5,19 @@
   </div>
 
   <div class="chart-wrapper">
-    <h2 class="chart-header">Visits by Day</h2>
-    <%= line_chart @stats.by_date, id: "by_date", xtitle: "Date", ytitle: "Number of Visits", curve: false %>
+    <h2 class="chart-header">Visits by Date</h2>
+    <%= line_chart @stats.by_date, id: "by_date", xtitle: "Date", ytitle: "Number of Visits", curve: false, library: { animation: { duration: 1500, easing: 'easeInQuad', delay: 0, loop: false}, plugins: { title: { display: true, text: 'Visits By Date' } } } %>
   </div>
 
   <div class="chart-wrapper">
     <h2 class="chart-header">Visits by Page</h2>
-    <%= bar_chart @stats.by_page, id: "by_page", xtitle: "Number of Visits", ytitle: "URL" %>
+    <%= bar_chart @stats.by_page, id: "by_page", xtitle: "Number of Visits", ytitle: "URL", library: { animation: { duration: 1500, easing: 'easeInQuad', delay: 0, loop: false}, plugins: { title: { display: true, text: 'Visits by Page' } } } %>
+  </div>
+
+  <div class="chart-wrapper">
+    <h2 class="chart-header">Visits by Referrer</h2>
+    <%= bar_chart @stats.by_referrer, id: "by_referrer", xtitle: "Number of Visits", ytitle: "Referrer", library: { animation: { duration: 1500, easing: 'easeInQuad', delay: 0, loop: false}, plugins: { title: { display: true, text: 'Visits by Referrer' } } } %>
   </div>
 </div>
+
+<%= javascript_pack_tag 'visit', 'data-turbolinks-track': 'reload' %>
