--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -10,12 +10,12 @@
   </div>
 
   <div class="chart-wrapper">
-    <h2 class="chart-header">Visits by Page</h2>
+    <h2 class="chart-header">Top 15 Visits by Page</h2>
     <%= bar_chart @stats.by_page, id: "by_page", xtitle: "Number of Visits", ytitle: "URL", library: { animation: { duration: 1500, easing: 'easeInQuad', delay: 0, loop: false}, plugins: { title: { display: true, text: 'Visits by Page' } } } %>
   </div>
 
   <div class="chart-wrapper">
-    <h2 class="chart-header">Visits by Referrer</h2>
+    <h2 class="chart-header">Top 15 Visits by Referrer</h2>
     <%= bar_chart @stats.by_referrer, id: "by_referrer", xtitle: "Number of Visits", ytitle: "Referrer", library: { animation: { duration: 1500, easing: 'easeInQuad', delay: 0, loop: false}, plugins: { title: { display: true, text: 'Visits by Referrer' } } } %>
   </div>
 </div>
