--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,7 +1,13 @@
 <div class="visits">
   <div class="chart-wrapper">
     <h2 class="chart-header">Summary</h2>
-    <p>Total Visits: <span><%= @stats.total_visits %></span></p>
+    <div class="summary-container">
+      <p class="summary-label">Total Visits: <span class="summary-value"><%= @stats.summary[:total_visits] %></span></p>
+      <p class="summary-label">Average Daily Visits: <span class="summary-value"><%= @stats.summary[:avg_daily_visits] %></span></p>
+      <p class="summary-label">Median Daily Visits: <span class="summary-value"><%= @stats.summary[:median_daily_visits] %></span></p>
+      <p class="summary-label">Max Visits: <span class="summary-value"><%= @stats.summary[:max_visits] %></span></p>
+      <p class="summary-label">Min Visits: <span class="summary-value"><%= @stats.summary[:min_visits] %></span></p>
+    </div>
   </div>
 
   <div class="chart-wrapper">
