--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>HelloVisitor</title>
+  <title>Hello Visitor</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -15,7 +15,7 @@
   <p class="alert"><%= alert %></p>
 
   <div class="app-container">
-    <h1 class="app-title">Hello Visitor: Privacy Focused Analytics</h1>
+    <h1 class="app-title">Hello Visitor - Privacy Focused Analytics</h1>
     <%= yield %>
   </div>
 </body>
