--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -19,13 +19,20 @@
     justify-content: space-between;
   }
 
+  .stats-entry {
+    align-items: center;
+    display: flex;
+  }
+
   .summary-label {
     font-size: 16px;
+    margin-right: 5px;
     opacity: 0.7;
   }
 
   .summary-value {
     font-size: 20px;
     letter-spacing: 1.2px;
+    opacity: 0.8;
   }
 }
