--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .visits {
   .chart-wrapper {
-    margin: 40px 0;
+    margin: 50px 0;
 
     .chart-header {
       font-size: 14px;
@@ -34,5 +34,12 @@
     font-size: 20px;
     letter-spacing: 1.2px;
     opacity: 0.8;
+  }
+
+  .chart {
+    padding: 25px;
+    background-color: #f5f5f5;
+    border-radius: 2px;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
   }
 }
