--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -2,6 +2,47 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .visits {
+  .action-wrapper {
+    display: flex;
+    margin: 50px 0;
+  }
+
+  .link-wrapper {
+    margin-right: 20px;
+  }
+
+  .action-link {
+    border: 1px solid #3366cc;
+    border-radius: 2px;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
+    color: #3366cc;
+    display: inline-block;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 1.1px;
+    line-height: 35px;
+    padding: 0 25px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all 0.2s ease;
+    width: 120px;
+
+    &:hover {
+      border: 1px solid #0d398f;
+      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.2);
+      color: #0d398f;
+    }
+  }
+
+  .active .action-link {
+    background-color: #527ed2;
+    border: 1px solid transparent;
+    color: white;
+    pointer-events: none;
+  }
+
   .chart-wrapper {
     margin: 50px 0;
 
