add clear filters link

--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .visits {
   .action-wrapper {
+    align-items: center;
     display: flex;
     margin: 50px 0;
   }
