--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -12,6 +12,11 @@
     margin-right: 20px;
   }
 
+  .action-wrapper div:last-child {
+    margin-left: auto;
+    margin-right: 0;
+  }
+
   .action-link {
     border: 1px solid #3366cc;
     border-radius: 2px;
@@ -34,6 +39,22 @@
       border: 1px solid #0d398f;
       box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.2);
       color: #0d398f;
+    }
+  }
+
+  .reset-link {
+    color: darken(#3366cc, 20);
+    display: inline-block;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 1.1px;
+    line-height: 35px;
+    text-decoration: none;
+    transition: all 0.2s ease;
+
+    &:hover {
+      color: darken(#3366cc, 30);
     }
   }
 
