--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -13,7 +13,7 @@
       <%= link_to 'Last 2 days', visits_path(range_end: Time.zone.now, range_start: Time.zone.now - 2.days), class: "action-link" %>
     </div>
     <div class="link-wrapper">
-      <%= link_to 'Clear Filters', visits_path, class: "reset-link" %>
+      <%= link_to 'Reset Filters', visits_path, class: "reset-link" %>
     </div>
   </div>
 
