--- a/app/assets/stylesheets/visits.scss
+++ b/app/assets/stylesheets/visits.scss
@@ -105,4 +105,24 @@
     border-radius: 2px;
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
   }
+
+  .content-search {
+    font-family: sans-serif;
+    opacity: 0.7;
+
+    .search-input {
+      background-color: #f8f8f8;
+      border-color: #888888;
+      border-radius: 30px;
+      border-style: solid;
+      border-width: 2px;
+      font-size: 16px;
+      padding: 10px;
+      padding-left: 15px;
+    }
+
+    .search-submit {
+      visibility: hidden;
+    }
+  }
 }
