--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -19,9 +19,8 @@
 
   <div class="content-search">
     <%= form_with model: @visit_search, url: visits_path, method: :get, local: true do |form| %>
-      <%= form.label :url, "Search for content:" %>
-      <%= form.text_field :url %>
-      <%= form.submit "Search" %>
+      <%= form.text_field :url, placeholder: "Content filter", class: 'search-input' %>
+      <%= form.submit "Search", class: 'search-submit' %>
     <% end %>
   </div>
 
