--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -19,7 +19,10 @@
 
   <div class="content-search">
     <%= form_with model: @visit_search, url: visits_path, method: :get, local: true do |form| %>
-      <%= form.text_field :url, placeholder: "Content filter", class: 'search-input' %>
+      <div class="search-input-container">
+        <%= form.text_field :url, placeholder: "Content filter", class: 'search-input' %>
+        <%= fa_icon "search", class: 'search-icon' %>
+      </div>
       <%= form.submit "Search", class: 'search-submit' %>
     <% end %>
   </div>
