--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -3,18 +3,19 @@
   <div class="bg-white shadow-md rounded-md p-4">
     <h2 class="text-lg font-medium text-gray-800">Filters & Search</h2>
     <div class="flex flex-col space-y-4 mt-3">
-      <!-- Filter Options -->
+      <%# TODO: Figure out how to represent quick filters as a pre-populated search form so there's only one way to do things %>
+      <!-- Quick Filters -->
       <div class="flex space-x-4">
-        <%= link_to 'Last year', visits_path(range_end: Time.zone.now, range_start: Time.zone.now - 1.year), class: "px-4 py-2 rounded-md bg-gray-200 hover:bg-gray-300 #{'bg-indigo-100 text-indigo-600' if @date_range.num_days == 365} uppercase tracking-wider font-semibold text-sm" %>
-        <%= link_to 'Last month', visits_path(range_end: Time.zone.now, range_start: Time.zone.now - 1.month), class: "px-4 py-2 rounded-md bg-gray-200 hover:bg-gray-300 #{'bg-indigo-100 text-indigo-600' if @date_range.num_days.between?(28, 31)} uppercase tracking-wider font-semibold text-sm" %>
-        <%= link_to 'Last week', visits_path(range_end: Time.zone.now, range_start: Time.zone.now - 1.week), class: "px-4 py-2 rounded-md bg-gray-200 hover:bg-gray-300 #{'bg-indigo-100 text-indigo-600' if @date_range.num_days == 7} uppercase tracking-wider font-semibold text-sm" %>
-        <%= link_to 'Last 2 days', visits_path(range_end: Time.zone.now, range_start: Time.zone.now - 2.days), class: "px-4 py-2 rounded-md bg-gray-200 hover:bg-gray-300 #{'bg-indigo-100 text-indigo-600' if @date_range.num_days == 2} uppercase tracking-wider font-semibold text-sm" %>
+        Quick Filters TBD
         <%= link_to 'Reset Filters', visits_path, class: "px-4 py-2 rounded-md text-red-600 hover:text-red-800 hover:underline uppercase tracking-wider font-semibold text-sm" %>
       </div>
 
       <!-- Search Form -->
       <%= form_with model: @visit_search, url: visits_path, method: :get, local: true, class: "flex items-center space-x-2" do |form| %>
         <%= form.text_field :url, placeholder: "Filter by content", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
+        <%= form.text_field :referrer, placeholder: "Filter by referrer", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
+        <%= form.date_field :start_date, placeholder: "Start date", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
+        <%= form.date_field :end_date, placeholder: "End date", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
         <%= form.submit "Search", class: "px-4 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700" %>
       <% end %>
     </div>
