search visits by referrer wip

--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -7,6 +7,7 @@
       <!-- Quick Filters -->
       <div class="flex space-x-4">
         Quick Filters TBD
+        <%# TODO: Maybe Reset should be in the search form %>
         <%= link_to 'Reset Filters', visits_path, class: "px-4 py-2 rounded-md text-red-600 hover:text-red-800 hover:underline uppercase tracking-wider font-semibold text-sm" %>
       </div>
 
