--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,13 +1,10 @@
 <div class="space-y-8">
   <!-- Filter and Search Section -->
   <div class="bg-white shadow-md rounded-md p-4">
-    <h2 class="text-lg font-medium text-gray-800">Filters & Search</h2>
+    <h2 class="text-lg font-medium text-gray-800">Search</h2>
     <div class="flex flex-col space-y-4 mt-3">
-      <%# TODO: Figure out how to represent quick filters as a pre-populated search form so there's only one way to do things %>
-      <!-- Quick Filters -->
+      <%# TODO: Maybe Reset should be in the search form %>
       <div class="flex space-x-4">
-        Quick Filters TBD
-        <%# TODO: Maybe Reset should be in the search form %>
         <%= link_to 'Reset Filters', visits_path, class: "px-4 py-2 rounded-md text-red-600 hover:text-red-800 hover:underline uppercase tracking-wider font-semibold text-sm" %>
       </div>
 
