refactor charts to partials

--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -47,95 +47,45 @@
     <%# By Date %>
     <div class="bg-white shadow-md rounded-md p-4">
       <h2 class="text-lg font-medium text-gray-800">Visits by Date</h2>
-      <%= line_chart @stats.by_date,
-        id: "by_date",
-        height: "325px",
-        xtitle: "Date",
-        ytitle: "Number of Visits",
-        curve: true,
-        library: {
-          animation: {
-            duration: 1500,
-            easing: 'easeInQuad',
-            delay: 0,
-            loop: false
-          }
-        } %>
+      <%= render 'line_chart',
+             data: @stats.by_date,
+             id: 'by_date',
+             height: '325px',
+             xtitle: 'Date',
+             ytitle: 'Number of Visits' %>
     </div>
 
     <%# Pages %>
     <div class="bg-white shadow-md rounded-md p-4">
       <h2 class="text-lg font-medium text-gray-800">Top Pages</h2>
-      <%= bar_chart @stats.by_page,
-        id: "by_page",
-        height: "325px",
-        xtitle: "Number of Visits",
-        ytitle: "URL",
-        library: {
-          animation: {
-            duration: 1500,
-            easing: 'easeInQuad',
-            delay: 0,
-            loop: false
-          },
-          scales: {
-            y: {
-              ticks: {
-                autoSkip: false
-              }
-            }
-          }
-        } %>
+      <%= render 'bar_chart',
+             data: @stats.by_page,
+             id: 'by_page',
+             height: '325px',
+             xtitle: 'Number of Visits',
+             ytitle: 'URL' %>
     </div>
 
     <%# Referrers %>
     <div class="bg-white shadow-md rounded-md p-4">
       <h2 class="text-lg font-medium text-gray-800">Top Referrers</h2>
-      <%= bar_chart @stats.by_referrer,
-        id: "by_referrer",
-        height: "325px",
-        xtitle: "Number of Visits",
-        ytitle: "Referrer",
-        library: {
-          animation: {
-            duration: 1500,
-            easing: 'easeInQuad',
-            delay: 0,
-            loop: false
-          },
-          scales: {
-            y: {
-              ticks: {
-                autoSkip: false
-              }
-            }
-          }
-        } %>
+      <%= render 'bar_chart',
+             data: @stats.by_referrer,
+             id: 'by_referrer',
+             height: '325px',
+             xtitle: 'Number of Visits',
+             ytitle: 'Referrer' %>
     </div>
 
     <%# Bottom Pages %>
     <div class="bg-white shadow-md rounded-md p-4">
       <h2 class="text-lg font-medium text-gray-800">Bottom Pages</h2>
-      <%= bar_chart @stats.by_page_bottom,
-        id: "by_page_bottom",
-        height: "250px",
-        xtitle: "Number of Visits",
-        ytitle: "URL",
-        library: {
-          animation: {
-            duration: 1500,
-            easing: 'easeInQuad',
-            delay: 0,
-            loop: false
-          },
-          scales: {
-            y: {
-              ticks: {
-                autoSkip: false
-              }
-            }
-          }
-        } %>
+      <%= render 'bar_chart',
+             data: @stats.by_page_bottom,
+             id: 'by_page_bottom',
+             height: '250px',
+             xtitle: 'Number of Visits',
+             ytitle: 'URL' %>
     </div>
   </div>
 </div>
