--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -38,7 +38,7 @@
         <% @stats.summary.each do |label, value| %>
           <div class="p-3 bg-gray-100 rounded-md shadow-inner text-center">
             <span class="block text-sm text-gray-500"><%= label.to_s.humanize %></span>
-            <span class="block text-lg font-semibold text-gray-800"><%= value %></span>
+            <span class="block text-lg font-semibold text-gray-800" data-test-id="stat-<%= label.to_s.parameterize %>"><%= value %></span>
           </div>
         <% end %>
       </div>
