--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -2,30 +2,7 @@
    <!-- Filters -->
   <div class="bg-white shadow-md rounded-md p-4">
     <h2 class="text-lg font-medium text-gray-800">Filter</h2>
-    <%= form_with model: @visit_search, url: visits_path, method: :get, local: true, class: "space-y-4 mt-3" do |form| %>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-        <div>
-          <%= form.label :url, "Content", class: "block text-sm font-semibold text-gray-700" %>
-          <%= form.text_field :url, class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
-        </div>
-        <div>
-          <%= form.label :referrer, "Referrer", class: "block text-sm font-semibold text-gray-700" %>
-          <%= form.text_field :referrer, class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
-        </div>
-        <div>
-          <%= form.label :start_date, "Start date", class: "block text-sm font-semibold text-gray-700" %>
-          <%= form.date_field :start_date, placeholder: "Start date", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
-        </div>
-        <div>
-          <%= form.label :end_date, "End date", class: "block text-sm font-semibold text-gray-700" %>
-          <%= form.date_field :end_date, placeholder: "End date", class: "w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-indigo-500 focus:outline-none" %>
-        </div>
-      </div>
-      <div class="flex justify-end space-x-4 mt-4">
-        <%= form.submit "Search", class: "px-4 py-2 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 uppercase tracking-wider" %>
-        <%= link_to 'Reset', visits_path, class: "px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 hover:text-gray-800 uppercase tracking-wider" %>
-      </div>
-    <% end %>
+    <%= render 'filters', visit_search: @visit_search %>
   </div>
 
   <!-- Charts -->
@@ -35,12 +12,7 @@
     <div class="bg-white shadow-md rounded-md p-4">
       <h2 class="text-lg font-medium text-gray-800">Summary</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 mt-3">
-        <% @stats.summary.each do |label, value| %>
-          <div class="p-3 bg-gray-100 rounded-md shadow-inner text-center">
-            <span class="block text-sm text-gray-500"><%= label.to_s.humanize %></span>
-            <span class="block text-lg font-semibold text-gray-800" data-test-id="stat-<%= label.to_s.parameterize %>"><%= value %></span>
-          </div>
-        <% end %>
+        <%= render 'summary_stats', summary: @stats.summary %>
       </div>
     </div>
 
