--- a/app/views/visits/_quick_filters.html.erb
+++ b/app/views/visits/_quick_filters.html.erb
@@ -1,8 +1,12 @@
-<div class="mb-4">
-  <div class="flex space-x-2 mt-4">
-    <%= link_to '24 Hours', visits_path(visit_search: { start_date: 24.hours.ago.to_date, end_date: Time.zone.today }), class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
-    <%= link_to '7 Days', visits_path(visit_search: { start_date: 7.days.ago.to_date, end_date: Time.zone.today }), class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
-    <%= link_to '1 Month', visits_path(visit_search: { start_date: 1.month.ago.to_date, end_date: Time.zone.today }), class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
-    <%= link_to '3 Months', visits_path(visit_search: { start_date: 3.months.ago.to_date, end_date: Time.zone.today }), class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
+<div class="mb-4 mt-4">
+  <div class="inline-flex items-center space-x-0 divide-x divide-gray-300 border border-indigo-500 rounded-md bg-white">
+    <%= link_to '24 Hours', visits_path(visit_search: { start_date: 24.hours.ago.to_date, end_date: Time.zone.today }),
+          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
+    <%= link_to '7 Days', visits_path(visit_search: { start_date: 7.days.ago.to_date, end_date: Time.zone.today }),
+          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
+    <%= link_to '1 Month', visits_path(visit_search: { start_date: 1.month.ago.to_date, end_date: Time.zone.today }),
+          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
+    <%= link_to '3 Months', visits_path(visit_search: { start_date: 3.months.ago.to_date, end_date: Time.zone.today }),
+          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
   </div>
 </div>
