highlight active range in quick filters

--- a/app/views/visits/_quick_filters.html.erb
+++ b/app/views/visits/_quick_filters.html.erb
@@ -1,12 +1,22 @@
-<div class="mb-4 mt-4">
-  <div class="inline-flex items-center space-x-0 divide-x divide-gray-300 border border-indigo-500 rounded-md bg-white">
-    <%= link_to '24 Hours', visits_path(visit_search: { start_date: 24.hours.ago.to_date, end_date: Time.zone.today }),
-          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
-    <%= link_to '7 Days', visits_path(visit_search: { start_date: 7.days.ago.to_date, end_date: Time.zone.today }),
-          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
-    <%= link_to '1 Month', visits_path(visit_search: { start_date: 1.month.ago.to_date, end_date: Time.zone.today }),
-          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
-    <%= link_to '3 Months', visits_path(visit_search: { start_date: 3.months.ago.to_date, end_date: Time.zone.today }),
-          class: 'px-4 py-2 text-indigo-500 hover:bg-gray-100 focus:outline-none' %>
+<%# locals: visit_search %>
+
+<div class="mb-4">
+  <div class="inline-flex items-center divide-x divide-gray-300 border border-indigo-500 rounded-md bg-white">
+    <%= quick_filter_link('24 Hours',
+          { start_date: 24.hours.ago.to_date, end_date: Time.zone.today },
+          { start_date: visit_search.start_date, end_date: visit_search.end_date },
+          visits_path(visit_search: { start_date: 24.hours.ago.to_date, end_date: Time.zone.today })) %>
+    <%= quick_filter_link('7 Days',
+          { start_date: 7.days.ago.to_date, end_date: Time.zone.today },
+          { start_date: visit_search.start_date, end_date: visit_search.end_date },
+          visits_path(visit_search: { start_date: 7.days.ago.to_date, end_date: Time.zone.today })) %>
+    <%= quick_filter_link('1 Month',
+          { start_date: 1.month.ago.to_date, end_date: Time.zone.today },
+          { start_date: visit_search.start_date, end_date: visit_search.end_date },
+          visits_path(visit_search: { start_date: 1.month.ago.to_date, end_date: Time.zone.today })) %>
+    <%= quick_filter_link('3 Months',
+          { start_date: 3.months.ago.to_date, end_date: Time.zone.today },
+          { start_date: visit_search.start_date, end_date: visit_search.end_date },
+          visits_path(visit_search: { start_date: 3.months.ago.to_date, end_date: Time.zone.today })) %>
   </div>
 </div>
