small styling changes on quick filters

--- a/app/views/visits/_quick_filters.html.erb
+++ b/app/views/visits/_quick_filters.html.erb
@@ -1,6 +1,6 @@
 <%# locals: visit_search %>
 
-<div class="mb-4">
+<div class="mb-4 mt-4">
   <div class="inline-flex items-center divide-x divide-gray-300 border border-indigo-500 rounded-md bg-white">
     <%= quick_filter_link('24 Hours',
           { start_date: 24.hours.ago.to_date, end_date: Time.zone.today },
