experiments in registering chart click handler

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,5 +51,8 @@
 
       <%= yield %>
     </main>
+
+    <%# https://github.com/ankane/chartkick?tab=readme-ov-file#global-options %>
+    <%= yield :charts_js %>
   </body>
 </html>
