--- a/app/views/visits/_bar_chart.html.erb
+++ b/app/views/visits/_bar_chart.html.erb
@@ -18,5 +18,8 @@
           autoSkip: false
         }
       }
-    }
+    },
+    onClick: "function(event) {
+      console.log('=== CHART WAS CLICKED ===')
+    }"
   } %>
